--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.17.0",
     "express": "^4.15.0",
-    "fs": "0.0.1-security"
+    "formidable": "^1.1.1",
+    "fs": "0.0.1-security",
+    "jsonfile": "^2.4.0"
   }
 }
